<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我爱锁屏</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_share">分享</string>
    <!-- login&register -->
    <string name="login_username_hint">用户名/手机</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_key">获取激活码</string>
    <string name="input_reg_key">请输入激活码</string>
    <string name="register_telenum">请输入手机号</string>
    <string name="register_tele">手机号</string>
    <string name="register_pswinfo">需要包含字母数字，至少8个字符，区分大小写</string>
    <string name="register_psw">重复密码</string>
    <string name="register_pswrepeat">重复密码</string>
    <string name="register_code_hint">输入邀请者Id或手机号，没有则不填</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">忘记密码？</string>
    <string name="register_txt2">新用户注册</string>
    <string name="login_account">用户名</string>
    <string name="login_pwd">密码 </string>
    <string name="register_code">邀请码</string>
    <string name="message_search_hint">搜索&#8230;</string>

    <!-- main -->
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_set">设置</string>
    <string name="main_bottom_shop">商城</string>
    <string name="main_bottom_money">赚外快</string>
    <string name="main_bottom_find">发现 </string>
    <string name="main_bottom_group">好友</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="title_activity_main_in">MainInActivity</string>
    <string name="title_activity_left_menu_bottom_fragment">LeftMenuBottomFragment</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_order_info_item">OrderInfoItemActivity</string>
    <string name="title_activity_xian_shi_item">XianShiItemActivity</string>
    <string name="title_activity_money_item">MoneyItemActivity</string>
    <string name="title_activity_main_food">MainFoodActivity</string>
    <string name="title_activity_main_mei_rong">MainMeiRongActivity</string>
    <string name="title_activity_main_yu_le">MainYuLeActivity</string>
    <string name="title_activity_main_she_ying">MainSheYingActivity</string>
    <string name="title_activity_main_jiu_dian">MainJiuDianActivity</string>
    <string name="title_activity_main_qi_ta">MainQiTaActivity</string>
    <string name="title_activity_da_ti">DaTiActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_news_info">NewsInfoActivity</string>
    <string name="title_activity_shequ">ShequActivity</string>
    <string name="title_activity_shequ_info">ShequInfoActivity</string>
    <string name="title_activity_dui_huan">DuiHuanActivity</string>

</resources>