<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_bg_color"
        android:orientation="vertical" >

        <include
            android:id="@+id/common_actionbar"
            layout="@layout/include_action_bar" />

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_account"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                style="@style/Register_Edit"
                android:hint="@string/register_username_hint" />
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/register_tele"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_telenum"
                style="@style/Register_Edit"
                android:hint="@string/register_telenum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_sendkey"
                android:layout_width="wrap_content"
                android:layout_height="48dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_selector"
                android:text="@string/register_key" />

            <EditText
                android:id="@+id/et_inputkey"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/base_edit_input"
                android:hint="@string/input_reg_key" />
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_pwd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Register_Edit"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_pswinfo"
            android:textColor="#8F8F8F"
            android:textSize="14sp" />

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/register_psw"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                style="@style/Register_Edit"
                android:hint="@string/register_pswrepeat"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/register_code"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_invitecode"
                style="@style/Register_Edit"
                android:hint="@string/register_code_hint"
                android:textSize="13sp" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:text="@string/register"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</ScrollView>