<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F7F6F4"
    tools:context="com.bmob.im.demo.ui.MainInActivity" >

    <!-- the top bar -->
    <LinearLayout 
        android:id="@+id/layout_topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#50C0A7"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="16dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/menu_icon" />
        
        <TextView 
            android:id="@+id/tv_shop_top_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shop_top_1_selector"
            android:layout_weight="2"
            android:text="团购 "
            android:textSize="15sp"
            android:textColor="@drawable/shop_top_text_color_selector"
            />
        
        <TextView 
            android:id="@+id/tv_shop_top_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shop_top_2_selector"
            android:textColor="@drawable/shop_top_text_color_selector"
            android:text="限时抢"
            android:textSize="15sp"
            />

        <TextView 
            android:id="@+id/tv_shop_top_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shop_top_3_selector"
            android:text="积分兑换"
            android:textSize="15sp"
            android:textColor="@drawable/shop_top_text_color_selector"
            />
        
        <TextView 
            android:id="@+id/tv_shop_top_share"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shop_top_share"
            android:layout_weight="1"
            />

    </LinearLayout>
    
    <!-- the location tab -->
    <LinearLayout 
        android:id="@+id/layout_locationbar"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="#00000000"
        android:orientation="horizontal"
        android:paddingTop="5dip"
        android:layout_marginTop="5dip"
        android:layout_below="@id/layout_topbar"
        >
        <TextView 
            android:id="@+id/btn_shop_location_myloca"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dip"
            android:drawableLeft="@drawable/btn_shop_location_myloca_selector"
            android:text="我的位置"
            android:textColor="@drawable/shop_location_text_color_selector"
            android:textSize="14sp"
            />
        <TextView 
            android:id="@+id/btn_shop_location_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_shop_location_sort_selector"
            android:text="智能排序"
            android:textColor="@drawable/shop_location_text_color_selector"
            android:textSize="14sp"
            />
        <TextView 
            android:id="@+id/btn_shop_location_range"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/btn_shop_location_range_selector"
            android:text="范围"
            android:textColor="@drawable/shop_location_text_color_selector"
            android:textSize="14sp"
            />
        
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#50C0A7" 
        android:layout_below="@id/layout_locationbar"
        ></TextView>
    
    <!-- the bottom tab -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#909090" 
        android:layout_above="@+id/layout_bottombar" >
    </TextView>

    <LinearLayout
        android:id="@+id/layout_bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#E0E0E0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_bm_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_bm_shop_selector"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:background="#00000000"
            android:text="@string/main_bottom_shop" 
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />
        
        <Button
            android:id="@+id/btn_bm_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_bm_money_selector"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:background="#00000000"
            android:text="@string/main_bottom_money" 
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp"
            ></Button>
        
        <Button
            android:id="@+id/btn_bm_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_bm_find_selector"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:background="#00000000"
            android:text="@string/main_bottom_find" 
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp"
            ></Button>
        
         <Button
            android:id="@+id/btn_bm_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_bm_group_selector"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:background="#00000000"
            android:scaleType="matrix"
            android:text="@string/main_bottom_group" 
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp"
            ></Button>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/fragment_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/layout_bottombar"
        ></RelativeLayout>

</RelativeLayout>